objects/AccountOpeningRequest__c.object
<CustomObject>
    <description>Tracks all Account Opening create/delivery requests.</description>
    <fields>
        <fullName>ApplicantEmail__c</fullName>
        <description>This field stores the original email of the applicant so that this record can be found if the opportunity isn&apos;t created properly.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Applicant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ApplicationId__c</fullName>
        <description>A UUID that uniquely identifies the account opening application.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Application ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FormName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobReferenceCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Job Reference Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Identifies the opportunity that represents the Account Opening application.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Account Opening Requests</relationshipLabel>
        <relationshipName>AccountOpeningRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProcessingStatus__c</fullName>
        <label>Processing Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                    <default>true</default>
                    <label>Ready</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestData__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TrackingCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Tracking Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Account Opening Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TrackingCode__c</columns>
        <columns>JobReferenceCode__c</columns>
        <columns>ApplicationId__c</columns>
        <columns>FormName__c</columns>
        <columns>ProcessingStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Opening Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>